--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -210,7 +210,7 @@ ip security
       profile DP-PROFILE
 !
 interface Port-Channel52
-   description DIRECT LAN HA LINK
+   description WAN_HA_cv-pathfinder-edge3A_Port-Channel52
    no shutdown
    mtu 9100
    no switchport
@@ -230,7 +230,7 @@ interface Ethernet2
    ip address 172.15.6.6/31
 !
 interface Ethernet52
-   description TODO: DIRECT LAN HA LINK MEMBER
+   description WAN_HA_cv-pathfinder-edge3A_Ethernet52
    no shutdown
    mtu 9100
    channel-group 52 mode active
