--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3B.yml
@@ -160,7 +160,7 @@ ethernet_interfaces:
   peer_type: wan_ha_peer
   peer_interface: Ethernet52
   peer: cv-pathfinder-edge3A
-  description: 'TODO: DIRECT LAN HA LINK MEMBER'
+  description: WAN_HA_cv-pathfinder-edge3A_Ethernet52
   type: port-channel-member
   shutdown: false
   channel_group:
@@ -174,7 +174,7 @@ port_channel_interfaces:
   peer_interface: Port-Channel52
   peer: cv-pathfinder-edge3A
   shutdown: false
-  description: DIRECT LAN HA LINK
+  description: WAN_HA_cv-pathfinder-edge3A_Port-Channel52
   ip_address: 10.10.10.1/31
   flow_tracker:
     hardware: FLOW-TRACKER
