Test: Add positive tests

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -110,7 +110,7 @@ router path-selection
       ipsec profile DP-PROFILE
       flow assignment lan
       !
-      local interface Port-Channel52
+      local interface Ethernet52
       !
       peer static router-ip 192.168.142.6
          name cv-pathfinder-edge3A
@@ -209,14 +209,6 @@ ip security
    key controller
       profile DP-PROFILE
 !
-interface Port-Channel52
-   description WAN_HA_cv-pathfinder-edge3A_Port-Channel52
-   no shutdown
-   mtu 9100
-   no switchport
-   flow tracker hardware FLOW-TRACKER
-   ip address 10.10.10.1/31
-!
 interface Dps1
    description DPS Interface
    mtu 9194
@@ -233,7 +225,9 @@ interface Ethernet52
    description WAN_HA_cv-pathfinder-edge3A_Ethernet52
    no shutdown
    mtu 9100
-   channel-group 52 mode active
+   no switchport
+   flow tracker hardware FLOW-TRACKER
+   ip address 10.10.10.1/31
 !
 interface Loopback0
    description ROUTER_ID
