--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
@@ -589,6 +589,10 @@ metadata:
           id: 404
           location:
             address: Not Found
+        - name: Site405
+          id: 405
+          location:
+            address: Method not allowed
         - name: Site422
           id: 422
           location:
