--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -372,6 +372,10 @@ all:
                   hosts:
                     cv-pathfinder-edge3A:
                     cv-pathfinder-edge3B:
+                SITE_DIRECT_HA_PORT_CHANNEL:
+                  hosts:
+                    cv-pathfinder-edge4A:
+                    cv-pathfinder-edge4B:
                 SITE_HA_DISABLED:
                   hosts:
                     cv-pathfinder-edge:
