--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge4B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge4B.cfg
@@ -23,13 +23,13 @@ flow tracking hardware
 !
 service routing protocols model multi-agent
 !
-hostname cv-pathfinder-edge3A
+hostname cv-pathfinder-edge4B
 !
 router adaptive-virtual-topology
-   topology role edge
+   topology role transit region
    region AVD_Land_West id 42
    zone AVD_Land_West-ZONE id 1
-   site Site404 id 404
+   site Site405 id 405
    !
    policy DEFAULT-AVT-POLICY
       !
@@ -109,7 +109,7 @@ router path-selection
    path-group INET id 101
       ipsec profile CP-PROFILE
       !
-      local interface Ethernet1
+      local interface Ethernet1.42
          stun server-profile INET-cv-pathfinder-pathfinder-Ethernet1 INET-cv-pathfinder-pathfinder-Ethernet3
       !
       peer dynamic
@@ -120,14 +120,13 @@ router path-selection
          ipv4 address 10.9.9.9
    !
    path-group LAN_HA id 65535
-      ipsec profile DP-PROFILE
       flow assignment lan
       !
-      local interface Ethernet52
+      local interface Port-Channel666
       !
-      peer static router-ip 192.168.142.7
-         name cv-pathfinder-edge3B
-         ipv4 address 10.10.10.1
+      peer static router-ip 192.168.142.8
+         name cv-pathfinder-edge4A
+         ipv4 address 10.10.10.0
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
       path-group INET
@@ -176,10 +175,7 @@ management security
 ip security
    !
    ike policy CP-IKE-POLICY
-      local-id 192.168.142.6
-   !
-   ike policy DP-IKE-POLICY
-      local-id 192.168.142.6
+      local-id 192.168.142.9
    !
    sa policy CP-SA-POLICY
       esp encryption aes256gcm128
@@ -198,7 +194,6 @@ ip security
       mode transport
    !
    profile DP-PROFILE
-      ike-policy DP-IKE-POLICY
       sa-policy DP-SA-POLICY
       connection start
       shared-key 7 ABCDEF1234567890666
@@ -208,34 +203,50 @@ ip security
    key controller
       profile DP-PROFILE
 !
+interface Port-Channel666
+   description WAN_HA_cv-pathfinder-edge4A_Port-Channel666
+   no shutdown
+   mtu 9194
+   no switchport
+   flow tracker hardware FLOW-TRACKER
+   ip address 10.10.10.1/31
+!
 interface Dps1
    description DPS Interface
    mtu 9194
    flow tracker hardware FLOW-TRACKER
-   ip address 192.168.142.6/32
+   ip address 192.168.142.9/32
 !
 interface Ethernet1
-   description ATT_404-01
    no shutdown
    no switchport
+!
+interface Ethernet1.42
+   description Comcast
+   no shutdown
+   encapsulation dot1q vlan 42
    ip address dhcp
    dhcp client accept default-route
 !
-interface Ethernet52
-   description WAN_HA_cv-pathfinder-edge3B_Ethernet52
+interface Ethernet42
+   description WAN_HA_cv-pathfinder-edge4A_Ethernet42
    no shutdown
-   mtu 9100
-   no switchport
-   flow tracker hardware FLOW-TRACKER
-   ip address 10.10.10.0/31
+   mtu 9194
+   channel-group 666 mode active
+!
+interface Ethernet43
+   description WAN_HA_cv-pathfinder-edge4A_Ethernet43
+   no shutdown
+   mtu 9194
+   channel-group 666 mode active
 !
 interface Loopback0
    description ROUTER_ID
    no shutdown
-   ip address 192.168.42.6/32
+   ip address 192.168.42.9/32
 !
 interface Vxlan1
-   description cv-pathfinder-edge3A_VTEP
+   description cv-pathfinder-edge4B_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
@@ -297,14 +308,14 @@ ip routing vrf IT
 no ip routing vrf MGMT
 ip routing vrf PROD
 !
-ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.6:404
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.8:405
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
-   set extcommunity soo 192.168.42.6:404 additive
+   set extcommunity soo 192.168.42.8:405 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
    description Make routes learned from WAN HA peer less preferred on LAN routers
@@ -316,7 +327,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   set extcommunity soo 192.168.42.6:404 additive
+   set extcommunity soo 192.168.42.8:405 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
@@ -327,7 +338,7 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   set extcommunity soo 192.168.42.6:404 additive
+   set extcommunity soo 192.168.42.8:405 additive
 !
 route-map RM-WAN-HA-PEER-IN permit 10
    description Set tag 50 on routes received from HA peer over EVPN
@@ -346,7 +357,7 @@ router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65000
-   router-id 192.168.42.6
+   router-id 192.168.42.9
    maximum-paths 16
    update wait-install
    no bgp default ipv4-unicast
@@ -364,13 +375,13 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
-   neighbor 192.168.142.7 remote-as 65000
-   neighbor 192.168.142.7 description cv-pathfinder-edge3B
-   neighbor 192.168.142.7 route-reflector-client
-   neighbor 192.168.142.7 update-source Dps1
-   neighbor 192.168.142.7 route-map RM-WAN-HA-PEER-IN in
-   neighbor 192.168.142.7 route-map RM-WAN-HA-PEER-OUT out
-   neighbor 192.168.142.7 send-community
+   neighbor 192.168.142.8 remote-as 65000
+   neighbor 192.168.142.8 description cv-pathfinder-edge4A
+   neighbor 192.168.142.8 route-reflector-client
+   neighbor 192.168.142.8 update-source Dps1
+   neighbor 192.168.142.8 route-map RM-WAN-HA-PEER-IN in
+   neighbor 192.168.142.8 route-map RM-WAN-HA-PEER-OUT out
+   neighbor 192.168.142.8 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -379,7 +390,7 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor 192.168.142.7 activate
+      neighbor 192.168.142.8 activate
       neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
@@ -399,23 +410,23 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS activate
    !
    vrf default
-      rd 192.168.42.6:1
+      rd 192.168.42.9:1
       route-target import evpn 1:1
       route-target export evpn 1:1
       route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
    !
    vrf IT
-      rd 192.168.42.6:1000
+      rd 192.168.42.9:1000
       route-target import evpn 1000:1000
       route-target export evpn 1000:1000
-      router-id 192.168.42.6
+      router-id 192.168.42.9
       redistribute connected
    !
    vrf PROD
-      rd 192.168.42.6:142
+      rd 192.168.42.9:142
       route-target import evpn 142:142
       route-target export evpn 142:142
-      router-id 192.168.42.6
+      router-id 192.168.42.9
       redistribute connected
 !
 router traffic-engineering
