Test: Add negative unit test

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -131,6 +131,10 @@ all:
               hosts:
                 duplicate-vlans-mlag-a:
                 duplicate-vlans-mlag-b:
+            WAN_HA_MULTIPLE_DIRECT_NO_PORT_CHANNEL:
+              hosts:
+                wan-ha-multiple-direct-no-port-channel1:
+                wan-ha-multiple-direct-no-port-channel2:
 
         EOS_DESIGNS_FAILURES_EXCLUDED:
           # These hosts are included in the vars and facts, but will not be included in the structured config run,
