--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
@@ -15,7 +15,7 @@
 
 - name: Generate eos intended configuration and device documentation
   when: >-
-      eos_cli_config_gen_configuration.enable | default(true) or
+      eos_cli_config_gen_configuration.enable | arista.avd.default(true) or
       (eos_cli_config_gen_documentation.enable | arista.avd.default(generate_device_documentation, true))
   arista.avd.eos_cli_config_gen:
     structured_config_filename: "{{ structured_config_filename }}"
@@ -23,7 +23,7 @@
     documentation_filename: "{{ devices_dir }}/{{ inventory_hostname }}.md"
     read_structured_config_from_file: "{{ structured_config is not arista.avd.defined }}"
     validation_mode: "{{ avd_data_validation_mode }}"
-    generate_device_config: "{{ eos_cli_config_gen_configuration.enable | default(true) }}"
+    generate_device_config: "{{ eos_cli_config_gen_configuration.enable | arista.avd.default(true) }}"
     generate_device_doc: "{{ eos_cli_config_gen_documentation.enable | arista.avd.default(generate_device_documentation, true) }}"
     device_doc_toc: true
     cprofile_file: "{{ eos_cli_config_gen_cprofile_file | default(omit) }}"
