Refactor: Address PR comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -119,7 +119,7 @@ router path-selection
    tcp mss ceiling ipv4 ingress
    !
    path-group CUSTOM_LAN_HA id 65535
-      ipsec profile DP-PROFILE
+      ipsec profile ONE-PROFILE-TO-CONTROL-THEM-ALL
       flow assignment lan
       !
       local interface Ethernet52
@@ -200,18 +200,11 @@ ip security
    ike policy CP-IKE-POLICY
       local-id 192.168.142.3
    !
-   ike policy DP-IKE-POLICY
-      local-id 192.168.142.3
-   !
    sa policy CP-SA-POLICY
       esp encryption aes256gcm128
       pfs dh-group 14
    !
-   sa policy DP-SA-POLICY
-      esp encryption aes256gcm128
-      pfs dh-group 14
-   !
-   profile CP-PROFILE
+   profile ONE-PROFILE-TO-CONTROL-THEM-ALL
       ike-policy CP-IKE-POLICY
       sa-policy CP-SA-POLICY
       connection start
@@ -219,16 +212,8 @@ ip security
       dpd 10 50 clear
       mode transport
    !
-   profile DP-PROFILE
-      ike-policy DP-IKE-POLICY
-      sa-policy DP-SA-POLICY
-      connection start
-      shared-key 7 ABCDEF1234567890666
-      dpd 10 50 clear
-      mode transport
-   !
    key controller
-      profile DP-PROFILE
+      profile ONE-PROFILE-TO-CONTROL-THEM-ALL
 !
 interface Dps1
    description DPS Interface
