--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
@@ -420,31 +420,15 @@ ip_extcommunity_lists:
     extcommunities: soo 192.168.42.2:423
 ip_security:
   ike_policies:
-  - name: DP-IKE-POLICY
-    local_id: 192.168.142.3
   - name: CP-IKE-POLICY
     local_id: 192.168.142.3
   sa_policies:
-  - name: DP-SA-POLICY
-    esp:
-      encryption: aes256gcm128
-    pfs_dh_group: 14
   - name: CP-SA-POLICY
     esp:
       encryption: aes256gcm128
     pfs_dh_group: 14
   profiles:
-  - name: DP-PROFILE
-    ike_policy: DP-IKE-POLICY
-    sa_policy: DP-SA-POLICY
-    connection: start
-    shared_key: ABCDEF1234567890666
-    dpd:
-      interval: 10
-      time: 50
-      action: clear
-    mode: transport
-  - name: CP-PROFILE
+  - name: ONE-PROFILE-TO-CONTROL-THEM-ALL
     ike_policy: CP-IKE-POLICY
     sa_policy: CP-SA-POLICY
     connection: start
@@ -455,7 +439,7 @@ ip_security:
       action: clear
     mode: transport
   key_controller:
-    profile: DP-PROFILE
+    profile: ONE-PROFILE-TO-CONTROL-THEM-ALL
 management_security:
   ssl_profiles:
   - name: profileA
@@ -595,7 +579,7 @@ router_path_selection:
       ipv4_addresses:
       - 172.17.0.5
       - 172.17.0.7
-    ipsec_profile: DP-PROFILE
+    ipsec_profile: ONE-PROFILE-TO-CONTROL-THEM-ALL
   load_balance_policies:
   - name: LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
     path_groups:
