Execute other molecules.

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -474,34 +474,29 @@ monitor connectivity
    interface set SET-Tunnel102 Tunnel102
    !
    host IE-Ethernet2
-      description
-      Internet Exit DIRECT-EXIT-POLICY-1
+      description Internet Exit DIRECT-EXIT-POLICY-1
       local-interfaces SET-Ethernet2
       ip 172.16.5.4
    !
    host IE-Ethernet2_1
-      description
-      Internet Exit DIRECT-EXIT-POLICY-1
+      description Internet Exit DIRECT-EXIT-POLICY-1
       local-interfaces SET-Ethernet2_1
       ip 172.16.5.9
    !
    host IE-Tunnel100
-      description
-      Internet Exit ZSCALER-EXIT-POLICY-1 PRI
+      description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
       local-interfaces SET-Tunnel100
       ip 10.37.121.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel101
-      description
-      Internet Exit ZSCALER-EXIT-POLICY-1 SEC
+      description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
       local-interfaces SET-Tunnel101
       ip 10.39.77.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel102
-      description
-      Internet Exit ZSCALER-EXIT-POLICY-1 TER
+      description Internet Exit ZSCALER-EXIT-POLICY-1 TER
       local-interfaces SET-Tunnel102
       ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
