--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -532,49 +532,42 @@ monitor connectivity
    interface set SET-Tunnel112 Tunnel112
    !
    host IE-Ethernet3
-      description
-      Internet Exit DIRECT-EXIT-POLICY-1
+      description Internet Exit DIRECT-EXIT-POLICY-1
       local-interfaces SET-Ethernet3
       ip 172.31.0.1
    !
    host IE-Tunnel100
-      description
-      Internet Exit ZSCALER-EXIT-POLICY-1 PRI
+      description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
       local-interfaces SET-Tunnel100
       ip 10.37.121.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel101
-      description
-      Internet Exit ZSCALER-EXIT-POLICY-1 SEC
+      description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
       local-interfaces SET-Tunnel101
       ip 10.39.77.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel102
-      description
-      Internet Exit ZSCALER-EXIT-POLICY-1 TER
+      description Internet Exit ZSCALER-EXIT-POLICY-1 TER
       local-interfaces SET-Tunnel102
       ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel110
-      description
-      Internet Exit ZSCALER-EXIT-POLICY-2 PRI
+      description Internet Exit ZSCALER-EXIT-POLICY-2 PRI
       local-interfaces SET-Tunnel110
       ip 10.37.121.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel111
-      description
-      Internet Exit ZSCALER-EXIT-POLICY-2 SEC
+      description Internet Exit ZSCALER-EXIT-POLICY-2 SEC
       local-interfaces SET-Tunnel111
       ip 10.39.77.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel112
-      description
-      Internet Exit ZSCALER-EXIT-POLICY-2 TER
+      description Internet Exit ZSCALER-EXIT-POLICY-2 TER
       local-interfaces SET-Tunnel112
       ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
