--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -423,8 +423,7 @@ monitor connectivity
    interface set SET-Ethernet2.42 Ethernet2.42
    !
    host IE-Ethernet2.42
-      description
-      Internet Exit DIRECT-EXIT-POLICY-2
+      description Internet Exit DIRECT-EXIT-POLICY-2
       local-interfaces SET-Ethernet2.42
       ip 123.12.3.4
 !
