Fix tunnel-rib-colored to tunnel-rib colored

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-ipv4-labeled-unicast.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-ipv4-labeled-unicast.yml
@@ -15,6 +15,11 @@ router_bgp:
           action: deny
           include_community_list: true
       next_hop_unchanged: true
+    next_hop_resolution_ribs:
+      - rib_type: "tunnel-rib colored"
+      - rib_type: "tunnel-rib"
+        rib_name: "test-rib"
+      - rib_type: "system-connected"
     label_local_termination: implicit-null
     networks:
       - prefix: 203.0.113.0/25
