--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-ipv4-labeled-unicast.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-ipv4-labeled-unicast.yml
@@ -16,7 +16,7 @@ router_bgp:
           include_community_list: true
       next_hop_unchanged: true
     next_hop_resolution_ribs:
-      - rib_type: "tunnel-rib colored"
+      - rib_type: "tunnel-rib-colored"
       - rib_type: "tunnel-rib"
         rib_name: "test-rib"
       - rib_type: "system-connected"
