--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
@@ -21,7 +21,7 @@
     structured_config_filename: "{{ structured_config_filename }}"
     config_filename: "{{ eos_config_dir }}/{{ inventory_hostname }}.cfg"
     documentation_filename: "{{ devices_dir }}/{{ inventory_hostname }}.md"
-    read_structured_config_from_file: "{{ structured_config is not arista.avd.defined }}"
+    read_structured_config_from_file: "{{ structured_config is not arista.avd.defined or structured_config.skipped is arista.avd.defined(true) }}"
     validation_mode: "{{ avd_data_validation_mode }}"
     generate_device_config: "{{ eos_cli_config_gen_configuration.enable | arista.avd.default(true) }}"
     generate_device_doc: "{{ eos_cli_config_gen_documentation.enable | arista.avd.default(generate_device_documentation, true) }}"
