Fix: Adjust template logic to fix the issue

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ip-access-lists.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ip-access-lists.yml
@@ -35,7 +35,8 @@ ip_access_lists:
         destination: any
         destination_ports_match: range
         destination_ports: [10, 20]
-      # verify issue 4423 where a protocol is missing
+      # verify issue 4423 where a protocol was missing
+      # and an entry with only the sequence number was rendered.
       - sequence: 60
         source: any
         destination: any
